Miscelaneous problems with `bnd-maven-plugin`