@@ -347,6 +347,17 @@
             </path>
           </annotationProcessorPaths>
         </configuration>
+        <executions>
+          <execution>
+            <id>default-testCompile</id>
+            <configuration>
+              <compilerArgs combine.children="append">
+                <!-- Disable automatic package discovery, which overwrites `log4j-core` plugins. -->
+                <arg>-ApluginPackage=org.apache.logging.log4j.core.test2</arg>
+              </compilerArgs>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
@@ -361,6 +372,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <argLine>
+            <!--
+              ~ Allow environment modification:
+              ~   https://junit-pioneer.org/docs/environment-variables/#warnings-for-reflective-access
+            -->
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
           <runOrder>random</runOrder>
           <systemPropertyVariables>
             <Web.isWebApp>false</Web.isWebApp>
